feat: added docs
